# CLIF-Trauma

./: .gitignore  README.md  pyproject.toml
config/: icd10cm_dictionary.csv  location_map.example.csv  trauma_icd_prefixes.example.csv
docs/: prd.md
src/clif_trauma/: __init__.py  cli.py  direct_sicu_analysis.py  pipeline.py  report.py
tests/: test_direct_sicu_analysis.py  test_pipeline.py  test_report.py
